# anywidget-graph

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
examples/: demo.py  test_hierarchy.py  test_large_graph.py
src/anywidget_graph/: __init__.py  demo.py  widget.py
src/anywidget_graph/backends/: __init__.py  arango.py  cosmosdb.py  grafeo.py  ladybug.py  neo4j.py
src/anywidget_graph/converters/: __init__.py  base.py  common.py  cypher.py  gql.py  graphql.py  gremlin.py  sparql.py
src/anywidget_graph/ui/: __init__.py  grafeo-embed.js  grafeo.js  icons.js  index.js  neo4j.js  properties.js  results.js  schema.js  settings.js  styles.css  toolbar.js
tests/: test_graph.py
